[gd_scene load_steps=9 format=3 uid="uid://ckokny0nf44h7"]

[ext_resource type="Script" uid="uid://cwmt1htlhx5l7" path="res://scripts/button.gd" id="1_rhj8v"]
[ext_resource type="Texture2D" uid="uid://dny25w2ettybq" path="res://assets/sprites/misc/Buttons.png" id="2_3q610"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t6tj8"]
atlas = ExtResource("2_3q610")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1sd5"]
atlas = ExtResource("2_3q610")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_dmp8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6tj8")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1sd5")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3q610"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhj8v"]
size = Vector2(16, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7y4x"]
size = Vector2(16, 10)

[node name="Button" type="Area2D"]
collision_mask = 2
script = ExtResource("1_rhj8v")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StaticBody2D"]
sprite_frames = SubResource("SpriteFrames_dmp8e")
animation = &"on"
autoplay = "off"
centered = false

[node name="CollisionShapeOn" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, 13)
shape = SubResource("RectangleShape2D_3q610")
disabled = true

[node name="CollisionShapeOff" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(8, 11.5)
shape = SubResource("RectangleShape2D_rhj8v")

[node name="CollisionShapeOn" type="CollisionShape2D" parent="."]
position = Vector2(8, 11)
shape = SubResource("RectangleShape2D_i7y4x")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
